--- a/courses/2015/montpellier/apps.Rmd
+++ b/courses/2015/montpellier/apps.Rmd
@@ -10,7 +10,7 @@ course:
   title: "Hierarchical Models Made Easy &mdash; August 1, 2015 &mdash; Montpellier, France &mdash; ICCB/ECCB Congress"
   lecture: Apps
   file: apps
-  previous: notes-04-misc
+  previous: notes-03-pva
 ---
 
 ## How to run the apps
