--- a/blog.Rmd
+++ b/blog.Rmd
@@ -1,13 +1,12 @@
 ---
-title: "Blog"
+title: "Blog posts"
 layout: default
 ---
 
-<ul>
-  {% for post in site.posts %}
-    <li>
-      <a href="{{ post.url }}">{{ post.title }}</a>
-      {{ post.excerpt }}
-    </li>
-  {% endfor %}
-</ul>
+{% for post in site.posts %}
+<div class="well">
+<h3><a href="{{ post.url }}">{{ post.title }}{% if post.subtitle %}: {{ post.subtitle }}{% endif %}</a></h3>
+<p><small>Posed on {{ page.date | date: '%B %d, %Y' }}</small></p>
+<p>{{ post.excerpt }}</p>
+</div>
+{% endfor %}
