--- a/blog.Rmd
+++ b/blog.Rmd
@@ -6,7 +6,7 @@ layout: default
 {% for post in site.posts %}
 <div class="well">
 <h3><a href="{{ post.url }}">{{ post.title }}{% if post.subtitle %}: {{ post.subtitle }}{% endif %}</a></h3>
-<p><small>Posed on {{ page.date | date: '%B %d, %Y' }}</small></p>
+<p><small>Posed on {{ post.date | date: '%B %d, %Y' }}</small></p>
 <p>{{ post.excerpt }}</p>
 </div>
 {% endfor %}
