--- a/_posts/2015-10-21-first-post.Rmd
+++ b/_posts/2015-10-21-first-post.Rmd
@@ -2,6 +2,8 @@
 title: "First post"
 subtitle: "ahogy kene"
 layout: blog
+category: DC
+tags: [opinion, example]
 comments: true
 published: true
 ---
