--- a/blog.Rmd
+++ b/blog.Rmd
@@ -8,3 +8,14 @@ layout: default
 <p><small>Posed on {{ post.date | date: '%B %d, %Y' }}</small></p>
 <p>{{ post.excerpt }}</p>
 {% endfor %}
+
+<h1>Articles by tag :{{ page.tag }}</h1>
+<div>
+    {% if site.tags[page.tag] %}
+        {% for post in site.tags[page.tag] %}
+            <a href="{{ post.url }}/">{{ post.title }}</a>
+        {% endfor %}
+    {% else %}
+        <p>There are no posts for this tag.</p>
+    {% endif %}
+</div>
