--- a/blog.Rmd
+++ b/blog.Rmd
@@ -9,13 +9,14 @@ layout: default
 <p>{{ post.excerpt }}</p>
 {% endfor %}
 
-<h1>Articles by tag :{{ page.tag }}</h1>
-<div>
-    {% if site.tags[page.tag] %}
-        {% for post in site.tags[page.tag] %}
-            <a href="{{ post.url }}/">{{ post.title }}</a>
+{% for tag in site.tags %}
+<h2>Articles by tag: {{ tag }}</h2>
+    {% if site.tags[tag] %}
+        {% for post in site.tags[tag] %}
+            <h3><a href="{{ post.url }}">{{ post.title }}{% if post.subtitle %}: {{ post.subtitle }}{% endif %}</a></h3>
+            <p><small>Posed on {{ post.date | date: '%B %d, %Y' }}</small></p>
         {% endfor %}
     {% else %}
         <p>There are no posts for this tag.</p>
     {% endif %}
-</div>
+{% endfor %}
