--- a/_posts/2015-10-21-first-post.Rmd
+++ b/_posts/2015-10-21-first-post.Rmd
@@ -3,7 +3,7 @@ title: "First post"
 subtitle: "ahogy kene"
 layout: blog
 category: DC
-tags: [opinion, example]
+tags: [Opinion, Example]
 comments: true
 published: true
 ---
