--- a/index.Rmd
+++ b/index.Rmd
@@ -7,7 +7,7 @@ layout: plain
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
 
-<h1 class="title">Happy Cloding!</h1>
+<h1 class="title">>D: Happy Cloding!</h1>
 <p>Frequentist statistical inference meets
 Bayesian Markov-chain Monte Carlo (MCMC) methods.</p>
 <!-- <p><a class="btn btn-primary" href="{{ site.baseurl }}/dc.html">Learn more</a></p> -->
