--- a/index.Rmd
+++ b/index.Rmd
@@ -11,6 +11,11 @@ layout: plain
 <p>Frequentist statistical inference meets
 Bayesian Markov-chain Monte Carlo (MCMC) methods.</p>
 <!-- <p><a class="btn btn-primary" href="{{ site.baseurl }}/dc.html">Learn more</a></p> -->
+<h3>
+<a href="https://twitter.com/datacloning"><i class="fa fa-twitter-square text-grey"></i></a>
+<a href="https://github.com/datacloning/"><i class="fa fa-github-square text-grey"></i></a> 
+<a href="http://datacloning.org/feed.xml"><i class="fa fa-rss-square text-grey"></i></a>
+</h3>
 
             </div>
         </div>
