--- a/courses/2016/madison/index.Rmd
+++ b/courses/2016/madison/index.Rmd
@@ -3,21 +3,6 @@ title: 'Hierarchical models for conservation biologists made easy'
 layout: default
 ---
 
-### One-day short course at [North American Congress for Conservation Biology](http://www.scbnacongress.org/) in Madison, Wisconsin, USA
-
-This training course is aimed towards the conservation professionals who need to understand and feel comfortable with modern statistical and computational tools used to address pressing conservation issues. By presenting both Bayesian and Likelihood based approaches, the participants will be able to go beyond the rhetorics of philosophy of statistics and use the tools with full understanding of their assumptions and implications.
-
-
----
-title: "Hierarchical models for conservation biologists made easy"
-layout: default
-category: Etc
-tags: [R, course, data cloning, dclone]
-published: true
-disqus: petersolymos
-promote: true
----
-
 **One-day short course at [NACCB congress](http://www.scbnacongress.org/) in Madison, WI, on July 16th, with Peter Solymos and Subhash Lele.**
 
 We aim this training course towards conservation professionals who need to understand and feel comfortable with modern statistical and computational tools used to address conservation issues. Conservation science needs to be transparent and credible to be able to make an impact and translate information and knowledge into action.
@@ -29,6 +14,15 @@ Communicating scientific methods and results require a full understanding of con
 Hierarchical models are useful in such situations. Fitting these models to data, however, is difficult. Advances in the last couple of decades in statistical theory and software development have fortunately made the data analysis easier, although not trivial. In this course, we propose to introduce statistical and computational tools for the analysis of hierarchical models (including tools for small sample inference) specifically in the context of conservation issues.
 
 We will teach both Bayesian and Likelihood based approaches to these models using freely available software developed by the tutors. By presenting both Bayesian and Likelihood based approaches participants will be able to go beyond the rhetorics of philosophy of statistics and use the tools with full understanding of their assumptions and implications. This will help ensure that when they use the statistical techniques, be they Bayesian or Frequentist, they will be able to explain and communicate the results to the managers and general public appropriately.
+
+### Where, when?
+
+The congress program is out (see [here](http://www.xcdsystem.com/scbna/program/)).
+
+* The short course date: Saturday, July 16,
+* time: 9:00 AM &ndash; 5:00 PM,
+* location: Meeting Room K.
+
 
 ### Registration
 
