--- a/courses/2016/madison/index.Rmd
+++ b/courses/2016/madison/index.Rmd
@@ -21,11 +21,8 @@ The congress program is out (see [here](http://www.xcdsystem.com/scbna/program/)
 
 * The short course date: Saturday, July 16,
 * time: 9:00 AM &ndash; 5:00 PM,
-* location: Meeting Room K.
-
+* location: Hall of Ideas H, [Monona Terrace Community and Convention Center](http://www.mononaterrace.com/).
 
 ### Registration
 
-Congress registration is now open [here](http://www.scbnacongress.org/short-courses).
-
-
+Congress registration is <del>now open [here](http://www.scbnacongress.org/short-courses)</del> closed.
