--- a/courses/index.Rmd
+++ b/courses/index.Rmd
@@ -5,7 +5,7 @@ layout: default
 
 ### Upcoming courses
 
-* [2016, Madison, Wisconsin, USA](./2016/madison/)
+* [July 16 2016, Madison, Wisconsin, USA](./2016/madison/)
 
 ### Past courses
 
