--- a/courses/2016/madison/index.Rmd
+++ b/courses/2016/madison/index.Rmd
@@ -34,7 +34,7 @@ We will teach both Bayesian and Likelihood based approaches to these models usin
 
 Participants should bring their own laptops. Open source and free software, and electronic course material will be provided by organizers.
 
-Coffee and lunch will be provided.
+Morning coffee, and afternoon iced tea and lemonade, plus light snack of chips and salsa will be provided.
 
 ### Course resources
 
