--- a/courses/2016/madison/how-to-prepare.Rmd
+++ b/courses/2016/madison/how-to-prepare.Rmd
@@ -10,7 +10,7 @@ course:
   lecture: How to
   file: how-to-prepare
   previous: index
-  next: quickstart
+  next:
 ---
 
 Please follow these steps and install necessary software onto your computer that you are going to use at the course. This way we can spend more time on talking about modeling.
